--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -52,6 +52,7 @@ parso==0.8.2
 pickleshare==0.7.5
 Pillow==8.4.0
 pip==21.2.4
+plotly==5.1.0
 prompt-toolkit==3.0.20
 Pygments==2.10.0
 pyparsing==3.0.4
@@ -66,8 +67,9 @@ redis==3.2.1
 sendgrid==6.0.5
 setuptools==58.0.4
 sip==4.19.13
-six==1.16.0
+six==1.15.0
 SQLAlchemy==1.4.3
+tenacity==8.0.1
 tornado==6.1
 traitlets==5.1.1
 wcwidth==0.2.5
