--- a/flask/conda_env.yml
+++ b/flask/conda_env.yml
@@ -71,16 +71,21 @@ dependencies:
   - parso=0.8.3=pyhd8ed1ab_0
   - pickleshare=0.7.5=py_1003
   - pillow=8.4.0=py39hd45dc43_0
+  - pip=21.3.1=pyhd8ed1ab_0
   - plotly=5.1.0=pyhd3eb1b0_0
   - prompt-toolkit=3.0.24=pyha770c72_0
   - pygments=2.10.0=pyhd8ed1ab_0
   - pyparsing=3.0.6=pyhd8ed1ab_0
-  - pyqt=5.12.3=py39hb0d2dfa_4
+  - pyqt=5.12.3=py39hcbf5309_8
+  - pyqt-impl=5.12.3=py39h415ef7b_8
+  - pyqt5-sip=4.19.18=py39h415ef7b_8
+  - pyqtchart=5.12=py39h415ef7b_8
+  - pyqtwebengine=5.12.1=py39h415ef7b_8
   - pyrsistent=0.18.0=py39hb82d6ee_0
   - python=3.9.7=h6244533_1
   - python_abi=3.9=2_cp39
   - pytz=2021.3=pyhd8ed1ab_0
-  - pywin32=228=py39hbaba5e8_1
+  - pywin32=303=py39hb82d6ee_0
   - pyzmq=22.3.0=py39he46f08e_1
   - qt=5.12.9=h5909a2a_4
   - scipy=1.7.1=py39hbe87c03_2
@@ -97,6 +102,7 @@ dependencies:
   - vc=14.2=hb210afc_5
   - vs2015_runtime=14.29.30037=h902a5da_5
   - wcwidth=0.2.5=pyh9f0ad1d_2
+  - wheel=0.37.1=pyhd8ed1ab_0
   - wtforms=3.0.1=pyhd8ed1ab_0
   - xz=5.2.5=h62dcd97_1
   - zeromq=4.3.4=h0e60522_1
@@ -125,9 +131,6 @@ dependencies:
     - jsmin==3.0.0
     - mako==1.1.4
     - markupsafe==1.1.1
-    - pyqt5-sip==4.19.18
-    - pyqtchart==5.12
-    - pyqtwebengine==5.12.1
     - python-dateutil==2.8.1
     - python-dotenv==0.10.3
     - python-editor==1.0.4
