--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -9,7 +9,7 @@ click==8.0.3
 colorama==0.4.4
 cssmin==0.2.0
 cycler==0.11.0
-dataclasses==0.8
+dataclasses
 debugpy==1.5.1
 decorator==5.1.0
 dnspython==2.1.0
@@ -45,9 +45,6 @@ Mako==1.1.4
 MarkupSafe==2.0.1
 matplotlib==3.4.2
 matplotlib-inline==0.1.3
-mkl-fft==1.3.1
-mkl-random==1.2.2
-mkl-service==2.4.0
 munkres==1.1.4
 nbformat==5.1.3
 nest-asyncio==1.5.4
@@ -62,19 +59,15 @@ Pillow==8.4.0
 pip==21.3.1
 plotly==5.1.0
 prompt-toolkit==3.0.24
+pymodbus==2.5.2
 Pygments==2.10.0
 pyparsing==3.0.6
-PyQt5==5.12.3
-PyQt5_sip==4.19.18
-PyQtChart==5.12
-PyQtWebEngine==5.12.1
 pyrsistent==0.18.0
 python-dateutil==2.8.2
 python-dotenv==0.10.3
 python-editor==1.0.4
 python-http-client==3.3.2
 pytz==2021.3
-pywin32==303
 pyzmq==22.3.0
 redis==3.2.1
 scipy==1.7.1
